# iacquabot

./: CMakeLists.txt  README.md  package.xml
launch/: manual.launch  view_robot.launch.launch
scripts/: imu_publisher.py  joy_control.py  odometry_publisher.py  prueba.py  quadcopter_dynamics.py  ros2sim.py  tf.py  trayectory.py  usv_model.py
urdf/: wamv.gazebo  wamv.xacro
urdf/components/: wamv_camera.xacro  wamv_gps.xacro  wamv_imu.xacro  wamv_p3d.xacro
worlds/: empty.world
