<package format="2">
  <name>iacquabot_mil</name>
  <version>0.0.1</version>
  <description>Model in the loop simulator for USV using Gazebo Classic and ROS1.</description>

  <maintainer email="brayan@example.com">Brayan Saldarriaga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>
